# FinRobot_MCP

./: .gitignore  README.md  config.py  config_api_keys  env_example.txt  example_client.py  expert_investor.py  expert_investor_stdio.py  llm_provider.py  mcp_chatbot.py  pyproject.toml  requirements.txt  requirements_expert_investor.txt  server_config.json  utils.py
data_source/: __init__.py  finnlp_utils.py  fmp_utils.py  sec_utils.py  yfinance_utils.py
functional/: analyzer.py  reportlab.py
