[project]
name = "finrobot-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "anthropic>=0.57.1",
    "asyncio-mqtt>=0.16.2",
    "fastmcp>=2.10.3",
    "finnhub-python>=2.4.24",
    "mcp>=1.10.1",
    "numpy>=2.3.1",
    "openai>=1.93.1",
    "pandas>=2.3.1",
    "praw>=7.8.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sec-api>=1.0.32",
    "tools>=1.0.2",
    "typing-extensions>=4.14.1",
    "yfinance>=0.2.65",
]
