[project]
name = "finrobot-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "anthropic>=0.57.1",
    "asyncio-mqtt>=0.16.2",
    "autogen>=0.9.6",
    "backtrader>=1.9.78.123",
    "fastmcp>=2.10.3",
    "finnhub-python>=2.4.24",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-text-splitters>=0.3.8",
    "mcp>=1.10.1",
    "mplfinance>=0.12.10b0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.1",
    "openai>=1.93.1",
    "pandas>=2.3.1",
    "praw>=7.8.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "sec-api>=1.0.32",
    "sentence-transformers>=5.0.0",
    "tools>=1.0.2",
    "typing-extensions>=4.14.1",
    "yfinance>=0.2.65",
]
